feat: add activation via email
